--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,12 @@
 /*  your css code here. If applicable */
+div{
+	background-color:white;
+}
+div p{
+	margin-left:10px;
+}
+body{
+	background-color:#f5f5f5;
+	margin-top:40px;
+	margin-left:30px;
+}
