--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,16 @@
 /*  your css code here. If applicable */
 div{
 	background-color:white;
-}
-div p{
-	margin-left:10px;
+	padding:3px;
+	margin:15px;
+	border: 0.4px solid black;
+	
 }
 body{
 	background-color:#f5f5f5;
-	margin-top:40px;
-	margin-left:30px;
-	border:30px;
-	padding:2px;
+}
+.p1,.p2{
+	text-align:right;
+	margin:20px;
+	font-style:italic;
 }
