--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,20 @@
 /*  your css code here. If applicable */
 div{
-	background-color:white;
-	padding:3px;
-	margin:15px;
-	border:solid black;
+	background-color:#fff;
+	padding:20px;
+	margin-bottom:20px;
+	border:1px solid #ccc;
 	
 }
 body{
 	background-color:#f5f5f5;
+	padding:40px;
 }
 .p1,.p2{
 	text-align:right;
-	margin:20px;
+	margin:0;
 	font-style:italic;
+}
+div p{
+	margin:0;
 }
